2007-12-20	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sp07/task1.c, sp34/changepri.c, sp35/priinv.c: Add rtems_task_self()
	directive instead of violating RTEMS internals.

2007-12-19	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sp07/init.c, sp07/system.h, sp07/tdelete.c, sp07/sp07.scn:
	Add test cases for User Extension Manager to improve code coverage.
	* sp21/task1.c: Fix spelling error.

2007-12-19	Joel Sherrill <joel.sherrill@OARcorp.com>

	* spsize/size.c: Account for previous changes in calculation of MPCI
	receive server stack.

2007-12-14	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sp09/screen07.c, sp09/sp09.scn: Add test for
	rtems_message_queue_broadcast for bad buffer and count pointers.
	* sp30/init.c, sp30/sp30.scn: Add test for initiating timer server
	with bad priority or initiating twice.
	* sp37/sp37.scn, sp37/system.h: Add test for rtems_clock_tick when
	it forces a dispatch.
	* sp37/init.c: New file.

2007-12-13	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, configure.ac: Add new tests for interrupt disable,
	enable, flash, and is in progress. These are normally inlines but
	also have bodies for non-C code. This test also exercises the odd
	case of calling clock tick from outside an ISR.
	* sp37/.cvsignore, sp37/Makefile.am, sp37/sp37.scn, sp37/system.h: New files.

2007-12-13	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sp07/init.c, sp07/sp07.scn, sp07/task1.c: Add tests for
	using notepad with the current task's ID or SELF
	* sp09/screen02.c, sp09/screen04.c, sp09/sp09.scn: Add
	test missing test cases for clock_get.

2007-12-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sp28/init.c: Add test code for task variables to improve coverage.

2007-12-11	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sp21/task1.c: Eliminate copies of the Configuration Table. Use the
	RTEMS provided accessor macros to obtain configuration fields.

2007-12-04	Joel Sherrill <joel.sherrill@OARcorp.com>
