@@ -60,6 +60,7 @@ sp32/Makefile
 sp33/Makefile
 sp34/Makefile
 sp35/Makefile
+sp36/Makefile
 sp37/Makefile
 spsize/Makefile
 spfatal/Makefile
